Add detailed README.md with setup instructions

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,40 @@ dmypy.json
 music_mood_env/
 
 *.json
+music_db/7UP Madras Gig - Orasaadha.mp3
+music_db/Aaj Sajeya - Goldie Sohel.mp3
+music_db/Aaj Sajeya.mp3
+music_db/Abdul Hannan & Rovalio - Iraaday.mp3
+music_db/Akshath - Nadaaniyan.mp3
+music_db/Anuv Jain - HUSN.mp3
+music_db/Arctic Monkeys - Do I Wanna Know.mp3
+music_db/Baraat_Groom Welcome Song.mp3
+music_db/Billie Eilish - BIRDS OF A FEATHER.mp3
+music_db/Bride's Entry MADHANYA | Rahul Vaidya | Asees Kaur.mp3
+music_db/Chhaap Tilak.mp3
+music_db/Din Shagna Da.mp3
+music_db/Djo - End Of Beginning.mp3
+music_db/Ed Sheeran - Perfect.mp3
+music_db/Gulabi Aankhen.mp3
+music_db/Harry Styles - As It Was.mp3
+music_db/Janam Janam.mp3
+music_db/Kudmayi - Rocky Aur Rani Kii Prem Kahaani.mp3
+music_db/Kudmayi.mp3
+music_db/Lana Del Rey - Sad Girl.mp3
+music_db/Last Girl - Elijah Woods.mp3
+music_db/Lord Huron - The Night We Met.mp3
+music_db/Madhaniya.mp3
+music_db/Makhna.mp3
+music_db/Matthe Te Chamkan.mp3
+music_db/Naacho Naacho - RRR.mp3
+music_db/Naatu-Naatu RRR.mp3
+music_db/O Piya - Parineeti Chopra.mp3
+music_db/Param Sundari.mp3
+music_db/Rita Ora - You & I.mp3
+music_db/Satranga.mp3
+music_db/Show Me The Thumka.mp3
+music_db/The 1975 - About You.mp3
+music_db/Tu Meri - Bang Bang.mp3
+music_db/Varmala_Jaimala Song- Shri Raghuvar Komal Kamal Nayan.mp3
+music_db/Vidaaii Song - 'Laadki' - Sachin-Jigar, Taniskha S, Kirtidan G, Rekha B - Coke Studio@MTV Season 4-trimmed.mp3
+music_db/With You - AP Dhillon.mp3
